src/test/deca/context/invalid/invalid_type.deca
// Description:
//    int = float ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
	gl x = 4;
}

